// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<SelectInput /> should render a creatable select box 1`] = `
<ClassBasedSelectInput
  isClearable={true}
  isSearchable={true}
  name="test"
  noResultsText="No results found"
  onNewOptionCreated={[Function]}
  options={
    Array [
      Object {
        "label": "option1",
        "value": "value1",
      },
      Object {
        "label": "option2",
        "value": "value2",
      },
    ]
  }
  placeholder="Please Select"
  shouldCloseOnSelect={true}
  shouldFilteringBePerformed={true}
  shouldRemoveElementsFromMultiSelect={true}
  value=""
/>
`;

exports[`<SelectInput /> should render a multi select box with options 1`] = `
<ClassBasedSelectInput
  isClearable={true}
  isMultiSelect={true}
  isSearchable={true}
  name="test"
  noResultsText="No results found"
  options={
    Array [
      Object {
        "label": "option1",
        "value": "value1",
      },
      Object {
        "label": "option2",
        "value": "value2",
      },
    ]
  }
  placeholder="Please Select"
  shouldCloseOnSelect={true}
  shouldFilteringBePerformed={true}
  shouldRemoveElementsFromMultiSelect={true}
  value=""
/>
`;

exports[`<SelectInput /> should render a select box with options 1`] = `
<ClassBasedSelectInput
  isClearable={true}
  isSearchable={true}
  name="test"
  noResultsText="No results found"
  options={
    Array [
      Object {
        "label": "option1",
        "value": "value1",
      },
      Object {
        "label": "option2",
        "value": "value2",
      },
    ]
  }
  placeholder="Please Select"
  shouldCloseOnSelect={true}
  shouldFilteringBePerformed={true}
  shouldRemoveElementsFromMultiSelect={true}
  value=""
/>
`;
